# gpu_claim

./: .gitignore  .gitmodules  .kateproject  CMakeLists.txt  LICENSE  README.md
.github/workflows/: apt.yaml
containers/: Dockerfile
files/: gpu_claim.conf  gpu_server.service  postinst  prerm
src/: client.cpp  gpu_container.cpp  hide_devices.cpp  priority_queue.cpp  priority_queue.h  protocol.h  server.cpp
src/server/: client.cpp  client.h  gpu_info.cpp  gpu_info.h  overloaded.h  server.cpp
